--- a/templates/managements.html
+++ b/templates/managements.html
@@ -149,7 +149,7 @@ Managements | Karunya Eye Hospital
     <!-- Card 2 -->
     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
       <div class="card border-0 shadow rounded text-center w-100" style="border-radius: 30px !important;">
-        <img src="{% static 'images/sup.jpg' %}" class="card-img-top img-fluid" alt="Centre Head" />
+        <img src="{% static 'images/sup.png' %}" class="card-img-top img-fluid" alt="Centre Head" />
         <div class="card-body">
           <h5 class="card-title mb-1">Mrs. Jyothilekshmi.S</h5>
           <h4 class="card-title fs-5">Nursing Superintendent</h4>
@@ -237,7 +237,7 @@ Managements | Karunya Eye Hospital
     <!-- Card 4 -->
     <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
       <div class="card border-0 shadow rounded text-center w-100" style="border-radius: 30px !important;">
-        <img src="{% static 'images/deepa.jpg' %}" class="card-img-top img-fluid" alt="Centre Head" />
+        <img src="{% static 'images/deepa.png' %}" class="card-img-top img-fluid" alt="Centre Head" />
         <div class="card-body">
           <h5 class="card-title mb-1">Mrs. Deepa A.R</h5>
           <h4 class="card-title fs-5">Chief Nursing Officer</h4>
