--- a/templates/managements.html
+++ b/templates/managements.html
@@ -81,16 +81,9 @@ Managements | Karunya Eye Hospital
           <h5 class="card-title mb-1">Mr. Thomas John</h5>
           <h4 class="card-title fs-5">Chief Operating Officer</h4>
           <p class="card-text description" style="font-size: 13px;">
-            Mr. Thomas joined with Karunya Eye Hospital August 2017 and his contributions helped the Hospital to reach
-            in its present position...
+Mr. Thomas John joined with Karunya Eye Hospital in July 2017 and his contributions helped the Hospital to reach in its present position...
             <span class="more-text d-none">
-              He plays a major role in determining the organisation’s operations, human resources, empanelment with
-              Government Projects like ECHS, CGHS, MEDISEP, around 32 major Private Health Insurance Companies and
-              accreditation process with NABH. He is actively involved in the day-to-day activities of the organisation.
-              He has taken up the role of an agent of transformation to support the organisation building, optimise
-              value across overall organisational processes. No matter how busy, he ensures that he finds time to
-              personally mentor staff and help them hone their skills. He has around 35 years of experience and prior to
-              joining Karun.
+              He is the Chief Operating Officer responsible for monitoring the strictness in the operational function of the hospital. By pioneering various strategies of administration for upgrading the internal quality, his admiring service for the past eight years has tagged him with the identity as the strongest pillar of KEH. He plays a major role in determining the organisation’s operations, human resources, empanelment with Government Projects like ECHS, CGHS, MEDISEP and major Private Health Insurance Companies in India and accreditation process with NABH. He is actively involved in the day-to-day activities of the organisation. No matter how busy, he ensures that he finds time to personally mentor staff and help them hone their skills. He has around 35 years of experience and prior to joining Karunya, he had worked with reputed Companies in India and abroad.
             </span>
           </p>
           <button class="btn btn-sm btn-outline-primary mt-2 toggle-btn" onclick="toggleText(this)">View More</button>
