--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -106,7 +106,7 @@ Doctors | Karunya Eye Hospital
         <div class="position-relative doctor-inner-box">
           <div class="doctor-profile">
             <div class="doctor-img">
-              <img src="static/images/team/doctor5.png" alt="doctor-image" class="img-fluid w-100"
+              <img src="static/images/team/mareena.jpg" alt="doctor-image" class="img-fluid w-100"
                 style="height: 250px; border-radius: 30px;" />
             </div>
           </div>
